<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tipsey</string>
    <string name="action_settings">Settings</string>
    <string name="imageName">Tipsey</string>
    <string name="start">Start the Game!</string>
    <string name="postGame"> CONGRADULATIONS! </string>
    <string name="postGameText">Your time was:</string>
    <string name="okay">Okay</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="howTo">How to Play:</string>
    <string name="howToPlay"> To play Tipsey all you need to do it tip the device so that the little blue ball on the screen moves toward the black
        dot, or hoop! Tip it forward to move the ball up, and back to move it back! Tip it right to move right and left to guess what? Move left!</string>
    <string name="aboutHead">About the Game:</string>
    <string name="aboutContent">The purpose of this game it to test response time after enjoying a few cold ones. The longer it takes the more you\'ve
        had! Pretty simple. </string>
    <string name="licenseHead">License Info:</string>
    <string name="licenseContent">This game is not to be paid for or tampered with. It\'s sole purpose it to educate. This game was a final project for
        a class. Also I accept no responsibility, and this game is not a accurate measure of anyones ability to drive, don\'t be an idiot: don\'t drink
        and drive!</string>
    <string name="haveFun">HAVE FUN!</string>

</resources>