<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AboutScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aboutActivityColor"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/HowTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howTo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/HowToPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/howToPlay" />

        <TextView
            android:id="@+id/aboutHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutHead"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/aboutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/aboutContent" />

        <TextView
            android:id="@+id/licenseHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenseHead"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/licenseContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/licenseContent" />

        <TextView
            android:id="@+id/haveFun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/haveFun"
            android:textSize="25sp" />
        
        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home" />

    </LinearLayout>

</ScrollView>