<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/postGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postGame"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/postGameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/postGameText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/okayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/okay" />

</LinearLayout>